fixed spacing on left side of job list items and removed excess width in job title

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body{
     flex-wrap: wrap;
     justify-content: flex-start;
     margin: 0;
-    padding-left: 0px;
+    padding-left: 25px;
     
   }
 
